--- a/[Bài tập] Tạo form đơn giản.html
+++ b/[Bài tập] Tạo form đơn giản.html
@@ -2,9 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <style type="text/css">
+
+        body {
+            background-color:aqua;}
+        .
+    </style>
 </head>
-<body>
-$END$
+<body >
+
+
+<form style="background-color: white" >
+
+
+    <table >
+    <tr>
+        <th>  <h1 style="background-color:#fc6b45"><font color="white"> SỞ THÍCH CỦA BẠN</font></th>
+    </tr>
+    <tr>
+        <td > <font color="blue" >Họ Và Tên</label>
+
+            <input type="text" name="yourname"><br></td>
+    </tr>
+    <tr>
+        <td>
+           <label><font color="blue">Email</label>
+            <input type="text" name="email"><br>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <label><font color="blue">Sở thích</label>
+            <input type="checkbox"name="hobby">
+            <label><font color="orange">Thể thao</label>
+            <input type="checkbox"name="hobby">
+            <label><font color="orange">Âm Nhạc</label>
+
+            <input type="checkbox"name="hobby">
+            <label><font color="orange">Đọc Sách</label><br>
+
+            <input type="checkbox"name="hobby">
+            <label><font color="orange">Lướt web</label>
+
+            <input type="checkbox"name="hobby">
+            <label><font color="orange">Chơi game</label>
+
+            <input type="checkbox"name="hobby">
+            <label><font color="orange">Điện ảnh</label>
+
+            <input type="checkbox"name="hobby"><br>
+            <label><font color="orange">Du lịch</label>
+
+            <input type="checkbox"name="hobby"><br>
+
+
+            <input type="submit"value="Gửi Thông Tin">
+            <input type="reset"value="Nhập Lại">
+
+        </td>
+        <td></td>
+
+    </tr>
+
+
+    </table>
+
+
+</form>
+
 </body>
 </html>
