--- a/Bài 2.9 Viết hàm truyền vào một mảng ký tự,.html
+++ b/Bài 2.9 Viết hàm truyền vào một mảng ký tự,.html
@@ -13,7 +13,7 @@
     for (let i = 0; i <5; i++) {
         arrCharacters[i] = +prompt("Nhập vào 1 mảng bất kỳ :");
     }
-    oneCharacters = +prompt("Nhập vào 1 ký tự:");
+    let oneCharacters = +prompt("Nhập vào 1 ký tự:");
     let count =0;
     function testCharacters(charac1,charac2) {
 
