--- a/Bài 2.1 Viết hàm tính bình phương của 1 số bất kỳ.html
+++ b/Bài 2.1 Viết hàm tính bình phương của 1 số bất kỳ.html
@@ -11,7 +11,7 @@
 
     inPut = +prompt("Nhập vào 1 số bất kỳ");
     function binhPhuong(a) {
-        if (a===inPut){
+        if (inPut){
             return  document.write(inPut*inPut)
         }else {
             return document.write("Không phải số: ")
