--- a/Bài 4 Thêm các hàm alert vào những vị trí thích hợp trong đoạn mã sau.html
+++ b/Bài 4 Thêm các hàm alert vào những vị trí thích hợp trong đoạn mã sau.html
@@ -9,7 +9,7 @@
 </body>
 <script>
     function addNumbers(firstNum,secondNum) {
-        result = firstNum + secondNum;
+       let result = firstNum + secondNum;
         document.write("0<br>")
         document.write(result);
     }addNumbers(2,3)
